:construction: adding the essential functionality like adding deleting and local storage but there is a tiny bug is when we add new thing is  the button still has focus so I need to shift the focus state  back to the input after adding new item

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,10 @@ input[type="checkbox"] {
   height: 2rem;
 }
 
+input[type="checkbox"]:checked + label {
+  text-decoration: line-through;
+}
+
 .icon {
   color: black;
   position: absolute;
@@ -116,6 +120,19 @@ input[type="text"]::placeholder {
 .addIcon {
   cursor: pointer;
   color: var(--thirdColor);
+  width: 2rem;
+  height: 2rem;
+  font-weight: 900;
+  font-size: 1.5rem;
+  background-color: transparent;
+}
+
+.addIcon:focus,
+.addIcon:hover {
+  text-align: center;
+  color: var(--primaryColor);
+  font-size: 2rem;
+  /* border: 2px solid black; */
 }
 
 /* input[type="text"]:invalid {
